--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 
 .contact-hero {
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-                url('../images/contact.jpg') center/cover no-repeat;
+                url('../images/general/contact.jpg') center/cover no-repeat;
     color: #ffffff;
     padding: 100px 0;
     text-align: center;
