--- a/css/resources.css
+++ b/css/resources.css
@@ -1,5 +1,5 @@
   .resources-hero {
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/images/resources.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/images/general/resources.jpg');
             background-size: cover;
             background-position: center;
             color: white;
