--- a/css/cosmetic.css
+++ b/css/cosmetic.css
@@ -11,7 +11,7 @@
   position: relative;
   height: 650px;
   background: linear-gradient(135deg, rgba(80, 60, 209, 0.7), rgba(40, 150, 255, 0.7)),
-    url('../images/Cosmetic.jpg') center/cover no-repeat;
+    url('../images/general/Cosmetic.jpg') center/cover no-repeat;
   display: flex;
   align-items: center;
   color: #ffffff;
