--- a/css/emergency.css
+++ b/css/emergency.css
@@ -1,6 +1,6 @@
 .emergency-hero {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                url('../images/emergency.jpg') center/cover no-repeat;
+                url('../images/general/emergency.jpg') center/cover no-repeat;
     color: #ffffff;
     padding: 6rem 0;
     text-align: center;
