--- a/css/orthondontics.css
+++ b/css/orthondontics.css
@@ -16,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../images/orthodontics.jpg') center/cover no-repeat;
+    background: url('../images/general/orthodontics.jpg') center/cover no-repeat;
     opacity: 0.3;
     z-index: 1;
 }
